8.7.0 (10-03-2023)
- New Feature: New academic debt generation rule strategy to create tuition installments and academic debts

8.6.9 (08-03-2023)
- Bug Fix: Consider all registrations of degree curricular plan, and not only registrations with active curricular plan

8.6.8 (06-03-2023)
- Bug Fix: Validate if custom academic debt amount is positive
- Bug Fix: In treasury event details, present the custom academic debt date

8.6.7 (16-02-2023)
- Bug Fix: Apply fix for debt date for academic tax, when student is not enrolled in curricular units

8.6.6 (15-02-2023)
- Improvement: Do not check if a finantial document maybe be integrated with success

8.6.5 (10-02-2023)
- Refactor: Remove method Customer::getFiscalCountry and other related methods of similar name. This method cause some confusion and is replaced by Customer::getAddressCountryCode

8.6.4 (09-02-2023)
- Bug Fix: Fix NPE in creating tuitions for registration, specifically in calculating the discounts table

8.6.3 (07-02-2023)
- Bug Fix: In exempting tuition installments, when creating tuition debts, consider only treasury events of the same degree as the registration

8.6.2 (30-01-2023)
- Refactor: Replace reference for FinantialDocumentEntry::setFinantialDocument by FinantialDocumentEntry::addToFinantialDocument
- Bug Fix: Consider totally exempted debit entries, created in CreateDebtsStrategy, which might be exempted due to reservation taxes

8.6.1 (26-01-2023)
- Refactor: method to edit course cost function

8.6.0 (04-01-2023)
- Refactor: Split TreasuryEvent::invokeSettlementCallbacks method in two, one receiving the settlement note and other the treasury exemption

8.5.4 (15-12-2022)
- Improvement: Check if there is already an active customer with the same fiscal number, only within the instances of the subclasses AdhocCustomer and PersonCustomer
- Improvement: Allow set code in Reservation Tax, in creation and edition

8.5.3 (12-12-2022)
- Bug Fix: Support delete reservation tax