@@ -1,3 +1,5 @@
+- Improvement: In the process of creating registration tuition debts, check if tuition will be created before check if the person has fiscal data properly filled
+
 8.7.0 (10-03-2023)
 - New Feature: New academic debt generation rule strategy to create tuition installments and academic debts
 
